# simple-solitaire

./: Cargo.toml  README.md
simple-solitaire-gui/: Cargo.toml
simple-solitaire-gui/src/: lib.rs  logic.rs  main.rs  window.rs
simple-solitaire-gui/src/cursors/: mod.rs
simple-solitaire-gui/src/graphics/: bitmap_font.rs  config.rs  context.rs  mod.rs  texture.rs
simple-solitaire-gui/src/graphics/res/: arcade_pix.fnt  shader.wgsl
simple-solitaire-lib/: Cargo.toml
simple-solitaire-lib/src/: board.rs  cards.rs  games.rs  lib.rs
