[package]
name = "simple-solitaire-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple-solitaire-lib = { path = "../simple-solitaire-lib" }

cfg-if = "1"
winit = { version = "0.30.4", features = ["rwh_06"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "22.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
glam = { version = "0.27.0", features = [ "bytemuck" ] }
mint =  "0.5.9"
crevice = { version = "0.16.0", features = [ "glam" ] }
rand = "0.8.5"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
wgpu = { version = "22.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
